--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
   <div class="mdl-cell mdl-cell--1-col graybox"></div>
   <div class="mdl-cell mdl-cell--10-col graybox">
     <div id='chart'>
-
+        <svg></svg>
     </div>
   </div>
   <div class="mdl-cell mdl-cell--1-col graybox"></div>
