--- a/src/app/my-nav/my-nav.component.html
+++ b/src/app/my-nav/my-nav.component.html
@@ -1,7 +1,7 @@
 <div class = "mdl-layout mdl-js-layout mdl-layout--fixed-header">
   <header class = "mdl-layout__header">
      <div class = "mdl-layout__header-row">
-        <span class = "mdl-layout-title">Material Design Grid</span>
+        <span class = "mdl-layout-title">sorting-visualization</span>
      </div>
   </header>
 
