--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,35 @@
 <div class="mdl-grid">
   <div class="mdl-cell mdl-cell--1-col graybox"></div>
   <div class="mdl-cell mdl-cell--10-col graybox">
-    <div id='chart'>
-        <!-- <svg></svg> -->
+    <div class="options">
+
+      <div class="mdl-grid mdl-grid--nesting">
+        <div class="mdl-cell mdl-cell--3-col"> <span class="slider-lable">Number of Elements:</span>
+          <mat-slider class="example-margin" [disabled]="sliderDisabled" [invert]="sliderInvert" [max]="sliderMax"
+            [min]="sliderMin" [step]="sliderStep" [thumbLabel]="thumbLabel" [(ngModel)]="numberOfElements"
+            [vertical]="sliderVertical" (change)="changeArray()">
+          </mat-slider>
+        </div>
+        <div class="mdl-cell mdl-cell--6-col">
+
+          <mat-form-field class="algo-select">
+            <mat-label>Algo</mat-label>
+            <mat-select [(ngModel)]="selectedAlgo">
+              <mat-option *ngFor="let algo of allAlgos" [value]="algo">
+                {{algo}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+        <div class="mdl-cell mdl-cell--3-col">
+          <button class=" sort-btn mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+            (click)="submit()">
+            Sort
+          </button>
+        </div>
+      </div>
     </div>
+    <div id='chart'></div>
   </div>
   <div class="mdl-cell mdl-cell--1-col graybox"></div>
 </div>
