adds responsive ness

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="mdl-grid">
   <div class="mdl-cell mdl-cell--1-col graybox"></div>
-  <div class="mdl-cell mdl-cell--10-col graybox">
+  <div class="mdl-cell mdl-cell--10-col graybox"  #container>
     <div class="options">
 
       <div class="mdl-grid mdl-grid--nesting">
