changes lable for slider

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
             [vertical]="sliderVertical"  (change)="changeArray()" >
           </mat-slider>
         </div>
-        <div class="mdl-cell mdl-cell--2-col"> <span class="slider-lable">Sorting Pace:</span>
+        <div class="mdl-cell mdl-cell--2-col"> <span class="slider-lable">Step Delay:</span>
           <mat-slider class="example-margin" [disabled]="sliderDisabled" [invert]="sliderInvert" [max]="500"
             [min]="10" [step]="10" [thumbLabel]="thumbLabel" [(ngModel)]="pace" [disabled]="sortDissable"
             [vertical]="sliderVertical" >
